--- a/public/assets/style/style.css
+++ b/public/assets/style/style.css
@@ -10,7 +10,7 @@ body {
 }
 .main {
     width: 350px;
-    height: 500px;
+    height: 600px;
     background: red;
     overflow: hidden;
     background: url("https://doc-08-2c-docs.googleusercontent.com/docs/securesc/68c90smiglihng9534mvqmq1946dmis5/fo0picsp1nhiucmc0l25s29respgpr4j/1631524275000/03522360960922298374/03522360960922298374/1Sx0jhdpEpnNIydS4rnN4kHSJtU1EyWka?e=view&authuser=0&nonce=gcrocepgbb17m&user=03522360960922298374&hash=tfhgbs86ka6divo3llbvp93mg4csvb38")
@@ -71,7 +71,7 @@ button:hover {
 .login {
     height: 460px;
     background: #eee;
-    border-radius: 60% / 10%;
+    border-radius: 60% / 7%;
     transform: translateY(-180px);
     transition: 0.8s ease-in-out;
 }
@@ -81,11 +81,16 @@ button:hover {
 }
 
 #chk:checked ~ .login {
-    transform: translateY(-500px);
+    transform: translateY(-560px);
 }
 #chk:checked ~ .login label {
     transform: scale(1);
 }
 #chk:checked ~ .signup label {
     transform: scale(0.6);
+}
+.spare-style {
+    margin: 20px auto !important;
+    width: 70% !important;
+    color: white !important;
 }
