--- a/public/assets/style/style.css
+++ b/public/assets/style/style.css
@@ -1,4 +1,4 @@
-body {
+.content {
     margin: 0;
     padding: 0;
     display: flex;
@@ -26,7 +26,7 @@ body {
     width: 100%;
     height: 100%;
 }
-label {
+.auth-label {
     color: #fff;
     font-size: 2.3em;
     justify-content: center;
@@ -36,7 +36,7 @@ label {
     cursor: pointer;
     transition: 0.5s ease-in-out;
 }
-input {
+.auth-input {
     width: 60%;
     height: 20px;
     background: #e0dede;
@@ -48,7 +48,7 @@ input {
     outline: none;
     border-radius: 5px;
 }
-button {
+.auth-button {
     width: 60%;
     height: 40px;
     margin: 10px auto;
@@ -65,7 +65,7 @@ button {
     transition: 0.2s ease-in;
     cursor: pointer;
 }
-button:hover {
+.auth-button:hover {
     background: #6d44b8;
 }
 .login {
