rename project to basic chat, correct views & sidebar menu

--- a/public/assets/style/style.css
+++ b/public/assets/style/style.css
@@ -183,8 +183,7 @@
 }
 
 .content .navbar .navbar-nav .nav-link {
-    margin-left: 25px;
-    padding: 12px 0;
+    padding: 7px 20px;
     color: var(--dark);
     outline: none;
 }
